
=== gtksourceview 1.8.5 ===

2007-03-11  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.5

=== gtksourceview 1.8.4 ===

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.4

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/php.lang: some builtins.
	Patch by Patryk Zawadzki.

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/perl.lang: perl operators.
	Patch by Joachim Noreiko.
	* gtksourceview/language-specs/ocaml.lang: fixes by 
	thelema@swbell.net.
	* gtksourceview/language-specs/ocaml.lang: missing keywords by 
	Stefan Schweizer.

2006-02-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceiter.c: (exact_prefix_cmp): new UTF8
        accent mark-aware replacement for strncmp(), fixes #339805;
        renamed g_utf8_* functions to utf8_* to avoid potential clash
        with glib namespace.

2007-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang:

	Highlight compiler directives.

2007-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/spec.lang:

	RPM spec lang by Konstantin Ryabitsev.

=== gtksourceview 1.8.3 ===

2006-12-13  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.3

2007-01-08  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/ocaml.lang:

	ocaml lang file by Eric Cooper (Bug #338344)

2007-01-02  Joachim Noreiko  <jnoreiko@yahoo.com>

	* gtksourceview/language-specs/docbook.lang: split keywords list
	to have under 250 elements. (Workaround for #110991.)

2006-12-26  Joachim Noreiko  <jnoreiko@yahoo.com>
